# ssa-urban-deprivation-benchmark

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
configs/figure_sets/: mvp_core_v1.yaml
configs/methods/: baseline_index_real_v1.yaml  baseline_index_v1.yaml  baseline_index_within_city_v1.yaml
configs/results/: mvp_core_findings_v1.yaml
configs/studies/: mvp_nairobi_dar.yaml  mvp_nairobi_dar_1km.yaml  ssa_multicity_core4.yaml  ssa_multicity_core6.yaml
examples/: mock_grid_cells.csv
image/README/: build_readme_teaser.py
metadata/: data_sources.yaml
outputs/models/: core4_patch_autoencoder.pt  core6_patch_autoencoder.pt  mvp_patch_autoencoder.pt
src/ssa_urban_deprivation_benchmark/: __main__.py  admin.py  artifacts.py  catalog.py  cli.py  clustering.py  dataset_profile.py  downloaders.py  feature_pipeline.py  indexing.py  interpretation.py  io_utils.py  masking.py  multimodal_ml.py  reporting.py  spatial.py  study.py  table_ops.py  validation.py  viz.py  weak_targets.py
tests/: test_admin.py  test_artifacts.py  test_indexing.py  test_interpretation.py  test_multimodal_ml.py  test_reporting_and_table_ops.py  test_validation.py  test_weak_targets.py
